Fix up some stuff that got broken in the refactor

--- a/frontend/assets/stylesheets/components/_payment-b.scss
+++ b/frontend/assets/stylesheets/components/_payment-b.scss
@@ -173,6 +173,12 @@
       @include mq($from: tablet) {
         display: block;
       }
+
+      a {
+        color: guss-colour(guardian-brand);
+        display: block;
+        margin-top: 10px;
+      }
     }
 
     .promo-code {
